swamponabox/singleserver/swampinabox_web_config/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT
-A INPUT -i virswamp0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virswamp0 -p tcp -m tcp --dport 67 -j ACCEPT
# -A INPUT -m state --state NEW -m tcp -p tcp --dport 111 -j ACCEPT
# -A INPUT -m state --state NEW -m udp -p udp --dport 111 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
